# super_tiny2docx

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/examples/: plain_html.py
src/super_tiny2docx/: __init__.py  converter.py
super_tiny2docx/: converter.py  doc_styles.py
