[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super_tiny2docx"
version = "0.1.0"
description = "Convert HTML from TinyMCE (or other WYSIWYG editors) into .docx documents easily. Designed for developers looking to integrate rich text export functionality into their Python applications. Contributions welcome!"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sekachev Maxim", email = "cement-fan@ya.ru" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Office/Business :: Office Suites",
]
keywords = [
    "html",
    "docx",
    "converter",
    "tinymce",
    "wysiwyg",
    "document-generation",
    "python-docx",
    "html-to-docx",
]

requires-python = ">=3.8"
dependencies = [
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort",
]

[project.urls]
Homepage = "https://github.com/cement-hools/super_tiny2docx"
Repository = "https://github.com/cement-hools/super_tiny2docx"
Issues = "https://github.com/cement-hools/super_tiny2docx"

[tool.setuptools.packages.find]
where = ["."]
include = ["super_tiny2docx"]