[build-system]
requires = ["uv_build >= 0.10.7, <0.11.0"]
build-backend = "uv_build"

[project]
name = "super_tiny2docx"
version = "0.1.3"
description = "Convert HTML from TinyMCE (or other WYSIWYG editors) into .docx documents easily. Designed for developers looking to integrate rich text export functionality into their Python applications. Contributions welcome!"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sekachev Maxim", email = "cement-fan@ya.ru" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Office/Business :: Office Suites",
]
keywords = [
    "html",
    "docx",
    "converter",
    "tinymce",
    "tiny",
    "tiny2docx",
    "tiny-to-docx",
    "tiny-converter",
    "wysiwyg",
    "document-generation",
    "python-docx",
    "html-to-docx",
    "html2docx",
]

requires-python = ">=3.10"
dependencies = [
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort",
]

[project.urls]
Homepage = "https://github.com/cement-hools/super_tiny2docx"
Repository = "https://github.com/cement-hools/super_tiny2docx"
Issues = "https://github.com/cement-hools/super_tiny2docx/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["super_tiny2docx*"]